[package]
name = "esso"
version = "1.0.0"
edition = "2021"
description = "Jest style tests in RUST"
homepage = "https://github.com/jamhall/esso"
repository = "https://github.com/jamhall/esso"
license = "MIT"
authors = ["Jamie Hall <hello@jamiehall.eu>"]
keywords = ["testing", "jest"]

[lib]
crate-type = ["proc-macro"]


[dependencies]
convert_case = "0.6.0"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
